<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/default_forecast_location"
        android:inputType="text"
        android:key="@string/forecast_location_key"
        android:singleLine="true"
        android:title="@string/forecast_location_value"/>

    <ListPreference
        android:defaultValue="@string/units_metric"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/unit_key"
        android:title="@string/unit_value"/>

    <CheckBoxPreference
        android:defaultValue="@bool/show_notifications"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notifications_label"/>

</PreferenceScreen>