<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/extra_details"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/detailAccentPaneBackground"
        android:paddingBottom="@dimen/forecast_detail_vertical_padding"
        android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
        android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
        android:paddingRight="@dimen/forecast_detail_horizontal_padding"
        android:paddingStart="@dimen/forecast_detail_horizontal_padding"
        android:paddingTop="@dimen/forecast_detail_vertical_padding">

        <android.support.constraint.Guideline
            android:id="@+id/vertical_delimiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            style="@style/DetailLabel"
            android:id="@+id/pressure_label"
            android:text="@string/pressure_label"
            app:layout_constraintLeft_toLeftOf="@id/extra_details"
            app:layout_constraintBottom_toBottomOf="@id/extra_details"
            app:layout_constraintTop_toTopOf="@id/extra_details"/>

        <TextView
            style="@style/ExtraWeatherMeasurement"
            android:id="@+id/pressure"
            tools:text="973 hpA"
            app:layout_constraintBottom_toBottomOf="@+id/pressure_label"
            app:layout_constraintLeft_toLeftOf="@+id/vertical_delimiter"/>

        <TextView
            style="@style/DetailLabel"
            android:id="@+id/humidity_label"
            android:text="@string/humidity_label"
            app:layout_constraintBottom_toTopOf="@+id/pressure_label"
            app:layout_constraintTop_toTopOf="@id/extra_details"
            app:layout_constraintLeft_toLeftOf="@id/extra_details"/>

        <TextView
            style="@style/ExtraWeatherMeasurement"
            android:id="@+id/humidity"
            tools:text="69%"
            app:layout_constraintLeft_toLeftOf="@+id/vertical_delimiter"
            app:layout_constraintBottom_toBottomOf="@+id/humidity_label"/>

        <TextView
            style="@style/DetailLabel"
            android:id="@+id/wind_label"
            android:text="@string/wind_label"
            app:layout_constraintLeft_toLeftOf="@id/extra_details"
            app:layout_constraintBottom_toBottomOf="@id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/pressure_label"/>

        <TextView
            style="@style/ExtraWeatherMeasurement"
            android:id="@+id/wind"
            tools:text="6 km/h SW"
            app:layout_constraintBottom_toBottomOf="@+id/wind_label"
            app:layout_constraintLeft_toLeftOf="@+id/vertical_delimiter"/>

    </android.support.constraint.ConstraintLayout>

</layout>